# juneteenth

./: .gitignore  CLAUDE.md  UI.md
.github/workflows/: backend.yml  schemas.yml
assets/smplx/: convert.py
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  pipeline.py  stub_dictionary.py
backend/app/blend/: __init__.py  blend.py  rotation.py
backend/app/gloss/: __init__.py  base.py  cache.py  claude.py  nebius.py  passthrough.py  prompt.py  service.py  tokens.py
backend/app/lookup/: __init__.py  lookup.py  store.py
backend/tests/: conftest.py  test_api.py  test_blend.py  test_gloss.py  test_lookup.py  test_pipeline.py
dictionary/: README.md  REAL_CLIPS.md  build.py  manifest.json  pyproject.toml  requirements.txt
dictionary/aslpipe/: __init__.py  build_clip.py  clean.py  extract.py  gcs.py  posekit.py  signavatars.py  synthesize.py  wlasl.py
dictionary/gpu_vm/: provision.sh  run_build.sh  setup.sh
dictionary/tests/: conftest.py  test_normalize.py  test_signavatars.py  test_wlasl.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: avatar.ts  caption.ts  controls.ts  main.ts  player.ts  stage.ts  styles.css  timeline.ts  types.ts  vapi.ts  vite-env.d.ts
frontend/src/smplx/: check.ts  forward.ts  integration.ts  mesh.ts  model.ts
infra/: README.md  setup.sh
schemas/: .gitignore  README.md
schemas/json/: gloss_sequence.schema.json  smplx_clip.schema.json  smplx_sequence.schema.json  vapi_webhook.schema.json
schemas/json/examples/: hello.example.clip.json
schemas/python/: pyproject.toml
schemas/python/asl_schemas/: __init__.py  gen_json_schema.py  models.py  validate.py
schemas/python/tests/: conftest.py  test_models.py
schemas/ts/: package-lock.json  package.json
schemas/ts/src/: index.ts
