[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asl-backend"
version = "0.1.0"
description = "Cloud Run backend for the Voice-to-ASL Signing Avatar POC (gloss/lookup/blend)"
requires-python = ">=3.10"
dependencies = [
    "asl-schemas",      # local: schemas/python (frozen §3 contracts)
    "openai>=1.40",     # Nebius (OpenAI-compatible) primary gloss provider
    "anthropic>=0.40",  # Claude fallback gloss provider
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.5",
    "numpy>=1.24",            # W4 slerp blend math
    "google-cloud-storage>=2.10",  # W3 reads clips from the GCS dictionary bucket
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]  # httpx for FastAPI TestClient

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
