[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asl-dictionary"
version = "0.1.0"
description = "W6 offline dictionary build pipeline for the Voice-to-ASL Signing Avatar POC"
requires-python = ">=3.10"
dependencies = [
    "asl-schemas",   # local: schemas/python (frozen §3 contracts)
    "numpy>=1.24",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["aslpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
